# best-ipmi-fan-control

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
docs/: README.md
docs/architecture/: control-flow.md
docs/ci/: github-actions.md
docs/configuration/: ini-schema.md  yaml-schema.md
docs/plans/: cpp-migration-plan.md
docs/zh-CN/: README.md
docs/zh-CN/architecture/: control-flow.md
docs/zh-CN/ci/: github-actions.md
docs/zh-CN/configuration/: ini-schema.md  yaml-schema.md
docs/zh-CN/plans/: cpp-migration-plan.md
etc/systemd/system/: ipmi-fan-control.service  ipmi-fan-control.service.example
examples/: config.example.ini  config.example.yaml
include/ipmi_fan_control/: cli.hpp  config.hpp  control.hpp  ipmi.hpp  logger.hpp  process.hpp  service.hpp  version.hpp.in
src/: cli.cpp  config.cpp  control.cpp  ipmi.cpp  ipmi.rs  logger.cpp  main.cpp  process.cpp  service.cpp
tests/: test_main.cpp
